fin Ejercicio Pageable, Logger, Exceptions